tests/functions/valid/forward_decl_multi_arg.amu
s32 foo(s32 a, s32 b);

main() : s32 {
    return foo(1, 2);
}

s32 foo(s32 x, s32 y){
    return x - y;
}