tests/functions/invalid/declaration_mismatch_2.amu
s32 foo(s32 a, s32 b);

s32 main() {
    return 5;
}

s32 foo(s32 a) {
    return 4;
}